[tool.poetry]
name = "whisper-test"
version = "0.1.0"
description = ""
authors = ["kaznak <kaznak.at.work@ipebble.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "whisper_test"}]

[tool.poetry.dependencies]
python = "^3.10"
openai-whisper = {git = "https://github.com/openai/whisper.git"}

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
